# awkrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark-readme-jit.md  benchmark-results.md
completions/: _awkrs
docs/: COMPATIBILITY.md  hud-theme.js  index.html  reference.html  report.html  tutorial.css
documentation/: COMPATIBILITY.md
examples/: a_star.awk  a_star.in  aho_corasick.awk  aho_corasick.in  anagrams.awk  anagrams.in  avl_tree.awk  avl_tree.in  base64.awk  base64.in  base_conv.awk  base_conv.in  bellman_ford.awk  bellman_ford.in  bigint_mul.awk  bigint_mul.in  boyer_moore.awk  boyer_moore.in  brainfuck.awk  bst.awk  bst.in  calc_rd.awk  calc_rd.in  coin_change.awk  coin_change.in  convex_hull.awk  convex_hull.in  conway.awk  conway.in  csv_pivot.awk  csv_pivot.in  date_calc.awk  date_calc.in  diff_lcs.awk  diff_lcs.in  dijkstra.awk  dijkstra.in  email_extract.awk  email_extract.in  fenwick.awk  (+99 more)
man/: awkrs.1
man/man1/: awkrs.1  awkrsall.1
parity/: PARITY_ROADMAP.md  gen_parity_awk.py  gen_parity_portable_awk.py  run_parity.sh
parity/cases/: 001_begin_print.awk  002_nr_fnr.awk  003_ofields.awk  004_sprintf_float.awk  006_file_input.awk  1000_bulk.awk  1001_bulk.awk  1002_bulk.awk  1003_bulk.awk  1004_bulk.awk  1005_bulk.awk  1006_bulk.awk  1007_bulk.awk  1008_bulk.awk  1009_bulk.awk  1010_bulk.awk  1011_bulk.awk  1012_bulk.awk  1013_bulk.awk  1014_bulk.awk  1015_bulk.awk  1016_bulk.awk  1017_bulk.awk  1018_bulk.awk  1019_bulk.awk  1020_bulk.awk  1021_bulk.awk  1022_bulk.awk  1023_bulk.awk  1024_bulk.awk  1025_bulk.awk  1026_bulk.awk  1027_bulk.awk  1028_bulk.awk  1029_bulk.awk  1030_bulk.awk  1031_bulk.awk  1032_bulk.awk  1033_bulk.awk  1034_bulk.awk  (+1046 more)
parity/cases_gawk/: 007_variadic_and.awk  008_variadic_or.awk  009_variadic_xor.awk  010_printf_hex_float.awk  011_close_pipe_status.awk  012_typeof.awk  013_isarray.awk  014_gensub.awk  015_patsplit.awk  016_strtonum.awk  017_mktime.awk  018_strftime.awk  019_asort_asorti.awk  020_mkbool_compl.awk  021_lshift_rshift.awk  024_systime_gettimeofday.awk  025_switch.awk  026_procinfo_basic.awk  027_length_variants.awk  028_ignorecase.awk  029_fieldwidths.awk  029_fieldwidths.in  030_fpat.awk  030_fpat.in  2016_gensub_multiple_groups.awk  2018_fpat_word_only.awk  2018_fpat_word_only.in  2019b_pow_compound_assign_star_star.awk  2021_typeof_untyped.awk  2023_csv_leading_comma.in  2027_split_with_seps_whitespace.awk  2037_gensub_numeric_how_basic.awk  2042_printf_unknown_conversion_is_literal.awk  2053_getline_errno_matches_strerror.awk  2063_ignorecase_index_patsplit.awk  2078_coerce_inf_nan.awk  2079_typeof_noisy_field.awk  2080_match_array_subscripts.awk  2082_mktime_utc_arg.awk  2085_rt_paragraph.awk
parity/cases_portable/: 2000_portable.awk  2001_portable.awk  2002_portable.awk  2003_portable.awk  2004_portable.awk  2005_portable.awk  2006_portable.awk  2007_portable.awk  2008_portable.awk  2009_portable.awk  2010_portable.awk  2011_portable.awk  2012_portable.awk  2013_portable.awk  2014_portable.awk  2015_portable.awk  2016_portable.awk  2017_portable.awk  2018_portable.awk  2019_portable.awk  2020_portable.awk  2021_portable.awk  2022_portable.awk  2023_portable.awk  2024_portable.awk  2025_portable.awk  2026_portable.awk  2027_portable.awk  2028_portable.awk  2029_portable.awk  2030_portable.awk  2031_portable.awk  2032_portable.awk  2033_portable.awk  2034_portable.awk  2035_portable.awk  2036_portable.awk  2037_portable.awk  (+962 more)
scripts/: benchmark-readme-jit-vs-vm.sh  benchmark-vs-awk.sh  capture-help-pty.py  demo-log-parsing.sh  demo-parallel-jit.sh  demo-quickstart.sh  gen-help-screenshot.sh
src/: aot.rs  ast.rs  ast_fmt.rs  banner.rs  bignum.rs  builtins.rs  bytecode.rs  cli.rs  cli_effects.rs  compiler.rs  cyber_help.rs  dap.rs  debugger.rs  error.rs  flow.rs  format.rs  fusevm_bridge.rs  fusevm_compile.rs  fusevm_host.rs  gawk_extensions.rs  gettext_util.rs  intercepts.rs  interp.rs  io.rs  jit.rs  lexer.rs  lib.rs  limits.rs  locale_numeric.rs  lsp.rs  main.rs  namespace.rs  parser.rs  procinfo.rs  record_io.rs  repl.rs  runtime.rs  rust_ffi.rs  script_cache.rs  source_expand.rs  (+3 more)
tests/: batch_integration.rs  begin_only_no_input.rs  common.rs  contract_printf_getline_lint.rs  contract_round_split_flow.rs  cross_feature_integration.rs  extra_integration.rs  ffi.rs  format_g_rounding_carry.rs  integration.rs  intercept_integration.rs  massive_integration.rs  more_integration.rs  new_features_integration.rs
(+1 files in other folders)
