[package]
name = "awkrs"
version = "0.1.8"
edition = "2021"
description = "Awk implementation in Rust with broad CLI compatibility and parallel record processing when safe"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/awkrs"
readme = "README.md"
keywords = ["awk", "cli", "text-processing"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
name = "awkrs"
path = "src/lib.rs"

[[bin]]
name = "awkrs"
path = "src/main.rs"

[[bin]]
name = "aw"
path = "src/bin/ars.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
libc = "0.2"
memchr = "2.7"
rayon = "1.10"
regex = "1.10"
rustc-hash = "2.1"
thiserror = "2.0"

