[package]
name = "awkrs"
version = "0.1.20"
edition = "2021"
description = "Awk implementation in Rust with broad CLI compatibility, parallel records, and experimental Cranelift JIT"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/awkrs"
readme = "README.md"
keywords = ["awk", "cli", "text-processing"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
name = "awkrs"
path = "src/lib.rs"

[[bin]]
name = "awkrs"
path = "src/main.rs"

[[bin]]
name = "aw"
path = "src/bin/ars.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
gettext = "0.4"
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-jit = "0.130.0"
cranelift-module = "0.130.0"
cranelift-native = "0.130.0"
libc = "0.2"
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
regex = "1.10"
rug = "1.29.0"
rustc-hash = "2.1"
target-lexicon = "0.13.5"
thiserror = "2.0"

